<resources>

    <string name="app_name">PhotoLocator</string>
    <string name="menu_settings">Settings</string>
    <string name="selectedFile">Selected file:</string>
    <string name="delete">Delete</string>
    <string name="shake">Shake to take a pic.</string>
    <string name="takingPicture">Taking picture.</string>
    <string name="pictureTaken">Picture taken.</string>
    <string name="pictureSaved">Picture saved.</string>
    <string name="show">Show</string>
    <string name="error">Error occurred.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="close">Close</string>
    <string name="pictureDetail">Detail of the picture.</string>
    <string name="fileDeleted">File deleted.</string>
    <string name="reload">Refresh</string>
    <string name="cameraNotReady">Camera is not ready.</string>

</resources>